swagger docs completed
