# handler/user.go
@@ -41,6 +41,16 @@ func validUser(id string, p string) bool {
 	return true
 }
 
+// GetUser godoc
+//	@Summary		Get a user by ID
+//	@Description	Retrieve user details by user ID
+//	@Tags			User
+//	@Param			id	path	string	true	"User ID"
+//	@Produce		json
+//	@Success		200	{object}	map[string]interface{}	"User found"
+//	@Failure		404	{object}	map[string]interface{}	"No user found with ID"
+//	@Failure		500	{object}	map[string]interface{}	"Internal Server Error"
+//	@Router			/api/user/{id} [get]
 func GetUser(c *fiber.Ctx) error {
 	id := c.Params("id")
 	db := database.DB
@@ -58,7 +68,7 @@ func GetUser(c *fiber.Ctx) error {
 //	@Tags			User
 //	@Accept			json
 //	@Produce		json
-//	@Param			user	body		map[string]interface{}	true	"User info"
+//	@Param			user	body		model.UserSwagger		true	"User info"
 //	@Success		200		{object}	map[string]interface{}	"status: success, message: Created user, data: {model.User.Username, model.User.Email}"
 //	@Failure		500		{object}	map[string]interface{}	"status: error, message: Review your input or Couldn't create user"
 //	@Router			/api/user [post]
@@ -95,6 +105,18 @@ func CreateUser(c *fiber.Ctx) error {
 }
 
 // UpdateUser update user
+// UpdateUser godoc
+//	@Summary		Update a user's information
+//	@Description	Update a user's names based on the provided ID and input data
+//	@Tags			User
+//	@Param			id		path	string					true	"User ID"
+//	@Param			input	body	model.UserUpdateSwagger	true	"Update user input"
+//	@Produce		json
+//	@Success		200	{object}	map[string]interface{}	"User successfully updated"
+//	@Failure		400	{object}	map[string]interface{}	"Invalid input"
+//	@Failure		500	{object}	map[string]interface{}	"Internal Server Error"
+//	@Security		BearerAuth
+//	@Router			/api/user/{id} [patch]
 func UpdateUser(c *fiber.Ctx) error {
 	type UpdateUserInput struct {
 		Names string `json:"names"`
@@ -121,6 +143,18 @@ func UpdateUser(c *fiber.Ctx) error {
 }
 
 // DeleteUser delete user
+// DeleteUser godoc
+//	@Summary		Delete a user by ID
+//	@Description	Delete a user based on the provided ID and password for verification
+//	@Tags			User
+//	@Param			id		path	string					true	"User ID"
+//	@Param			input	body	model.UserDeleteSwagger	true	"Password input for user verification"
+//	@Produce		json
+//	@Success		200	{object}	map[string]interface{}	"User successfully deleted"
+//	@Failure		400	{object}	map[string]interface{}	"Invalid input"
+//	@Failure		500	{object}	map[string]interface{}	"Internal Server Error"
+//	@Security		BearerAuth
+//	@Router			/api/user/{id} [delete]
 func DeleteUser(c *fiber.Ctx) error {
 	type PasswordInput struct {
 		Password string `json:"password"`
